syntax = "proto3";
package types;

option go_package = "github.com/keybittech/awayto-v3/go/pkg/types";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MethodOptions {
  CacheType cache = 50000;
  uint32 cache_duration = 50001;
  uint32 throttle = 50002;
  SiteRoles site_role = 50003;
  bool multipart_request = 50004;
  bool multipart_response = 50005;
  bool use_tx = 50006;
  repeated string invalidates = 50007;
  bool resets_group = 50008;
  bool resets_session = 50009;
}

extend google.protobuf.MessageOptions {
  string method = 50000;
  string url = 50001;
  bool mutex = 50002;
}

extend google.protobuf.FieldOptions {
  optional bool nolog = 70000;
}

enum CacheType {
  DEFAULT = 0;
  SKIP = 1;
  STORE = 2;
}

enum SiteRoles {
  UNRESTRICTED = 0;
  APP_ROLE_CALL = 1;
  APP_GROUP_ADMIN = 2;
  APP_GROUP_BOOKINGS = 4;
  APP_GROUP_SCHEDULES = 8;
  APP_GROUP_SERVICES = 16;
  APP_GROUP_SCHEDULE_KEYS = 32;
  APP_GROUP_ROLES = 64;
  APP_GROUP_USERS = 128;
  APP_GROUP_PERMISSIONS = 256;
}

enum EndpointType {
  MUTATION = 0;
  QUERY = 1;
}

message BufferResponse {
  string url = 1;
  string name = 2;
  bytes buffer = 3;
}
